--- a/index.html
+++ b/index.html
@@ -316,17 +316,17 @@
           
 
           <div class="row mt-5 justify-content-between align-items-center">
-            <div class="col-lg-7 mb-5 mb-lg-0" data-aos="fade-up">
+            <!--<div class="col-lg-7 mb-5 mb-lg-0" data-aos="fade-up">
               <figure class="dotted-bg">
-                <img src="images alt="Image" class="img-fluid">
+                
               </figure>
-            </div>
+            </div> -->
             <div class="doo col-lg-5 pl-lg-5" data-aos="fade-up"  data-aos-delay="100">
               <h3 class="qwer heading-h3 hey">ABOUT ME</h3>
               <p class="qwe">신유진 / SHIN YU JIN</p>
               <p class="qwe">BIRTH : 1997.11.21</p>
               <p class="qwe">PHONE : 010-4114-1041</p>
-              <p >E-MAIL : guna369@naver.com</p>
+              <p class="qwe">E-MAIL : guna369@naver.com</p>
 
               <ul class="hhhh"> <!--class="list-unstyled list-check d-block"-->
                 <li class="d-block">디자인은 사용자들이 한눈에 찾아볼 수 있고 <br>웹이 무엇을 전달하는지 구현해는 것이라 <br>생각합니다.
